# computer-vision

./: .gitignore
2/: Report.md  canny1.c
2/code/: .gitignore  canny-linux  canny-mac  canny.cpp  canny.h  code  main.cpp
3/: report.md
3/16340024+陈铭涛+Exp3/code/CoinDetect/: CMakeLists.txt  coin-detect-linux  程序运行指令.txt
5/: CMakeLists.txt  ImageMorphing.cpp  ImageMorphing.h  img2vid.cpp  main.cpp  report.docx
5/testimage/: .gitignore  hilump.txt  new.txt  points.txt  reverse.txt
5/testimage/extraCases/: krisem.txt
6/: .gitignore  report.docx  ~$report.docx
6/code/: CMakeLists.txt  RANSAC.cpp  RANSAC.h  blending.cpp  blending.h  cylindrical_warp.cpp  cylindrical_warp.h  feature_extract.cpp  feature_extract.h  feature_extraction.cpp  feature_extraction.h  feature_matching.cpp  feature_matching.h  image_stitching.cpp  image_stitching.h  main.cpp  neighboring_translation.cpp  neighboring_translation.h  panorama.cbp  point.cpp  point.h  spherical_warp.cpp  spherical_warp.h  utils.cpp  utils.h
7/a4/: CMakeLists.txt  a4.cbp  a4Warping.cpp  a4Warping.h  houghTransform.cpp  houghTransform.h  kmeans.cpp  kmeans.h  main.cpp  regionGrow.h  utils.cpp  utils.h
7/adaboost/: CMakeLists.txt  number-detection.cbp
7/adaboost/mnist/: boost1.xml  boost2.xml  boost3.xml  boost4.xml  boost7.xml
7/adaboost/python/: data.py  main.py
7/adaboost/src/: CMakeLists.txt  adaboost.cpp  adaboost.h  main.cpp  mnistData.cpp  mnistData.h  testUtils.cpp  testUtils.h
extra-1/1/: .gitignore  CImg.h  CMakeLists.txt  HistoEqual.cpp  HistoEqual.h  HistogramEqualization-linux  HistogramEqualization-mac  main.cpp
extra-1/1/testcases/: .gitignore
extra-1/2/: CMakeLists.txt  ColorTransfer-mac  ColorTransfer.cpp  ColorTransfer.h  main.cpp
extra-1/2/testcases/: .gitignore
final/: .gitignore  计算机视觉Final Project 报告-part2.docx  计算机视觉Final Project 报告.docx
final/ImageData/: .gitignore  CNN-result.xlsx  CNN_mnist.sh  CNN_mySet.sh  adaboost-result.xlsx  adaboost.sh
final/project/: CMakeLists.txt  csv2xlsx.py  recognition.cbp  requirements.txt
final/project/AdaboostPredict/: CMakeLists.txt  recognition.cbp
final/project/AdaboostPredict/src/: OpenCV_utils.cpp  OpenCV_utils.h  main.cpp  utils.cpp  utils.h
final/project/AdaboostPredict/src/a4/: a4Tools.h  a4Warping.cpp  houghTransform.cpp  houghTransform.h  kmeans.cpp  regionGrow.cpp  regionGrow.h
final/project/AdaboostPredict/src/histogram/: HistoEqual.cpp  HistoEqual.h
final/project/AdaboostPredict/src/segmentation/: segmentation.cpp  segmentation.h
final/project/CNN/: mySet_data.py  tf_cnn_mnist_predict.py  tf_cnn_mnist_run.py  tf_cnn_mnist_test.py  tf_cnn_mnist_train.py  tf_cnn_model.py  tf_cnn_mySet_run.py  tf_cnn_mySet_test.py  tf_cnn_mySet_train.py
final/project/CNN/mnist/mnist_convnet_model/: events.out.tfevents.1545991948.iZwz91of903ob7q193at50Z  model.ckpt-0.index
final/project/CNN/mnist/mnist_convnet_model/eval/: events.out.tfevents.1545992272.iZwz91of903ob7q193at50Z  events.out.tfevents.1546060559.ai.local  events.out.tfevents.1546060743.ai.local  events.out.tfevents.1546060891.ai.local  events.out.tfevents.1546060913.ai.local
final/project/CNN/myTestSet/: digits.txt
final/project/CNN/myTrainSet/mySet_convnet_model/: graph.pbtxt
final/project/CNN/myTrainSet/mySet_convnet_model/eval/: events.out.tfevents.1545991516.iZwz91of903ob7q193at50Z  events.out.tfevents.1545993372.ai.local  events.out.tfevents.1545993502.ai.local  events.out.tfevents.1545996865.ai.local  events.out.tfevents.1545997077.ai.local  events.out.tfevents.1545997197.ai.local  events.out.tfevents.1546014065.ai.local  events.out.tfevents.1546060591.ai.local  events.out.tfevents.1546060756.ai.local  events.out.tfevents.1546060876.ai.local
final/project/python/: mnist_data.py  mySet_data.py  requirements.txt  test.py  tf_cnn_mnist.py  tf_cnn_mnist_run.py  tf_cnn_mnist_test.py  tf_cnn_mnist_train.py  tf_cnn_model.py  tf_cnn_mySet_predict.py  tf_cnn_mySet_run.py  tf_cnn_mySet_test.py  tf_cnn_mySet_train.py  tf_cnn_predict.py  tf_cnn_test.py
final/project/python/mnist/mnist_convnet_model/: checkpoint  events.out.tfevents.1545903125.DESKTOP-0Q153B6  events.out.tfevents.1545903693.DESKTOP-0Q153B6  events.out.tfevents.1545918765.DESKTOP-0Q153B6  events.out.tfevents.1545991885.iZwz91of903ob7q193at50Z  graph.pbtxt  model.ckpt-0.index  model.ckpt-20000.index  model.ckpt-28321.index  model.ckpt-30000.index  model.ckpt-67526.index  model.ckpt-70000.index
final/project/python/mnist/mnist_convnet_model/eval/: events.out.tfevents.1545903636.DESKTOP-0Q153B6  events.out.tfevents.1545904340.DESKTOP-0Q153B6  events.out.tfevents.1545918300.ai.local  events.out.tfevents.1545918333.ai.local  events.out.tfevents.1545918355.ai.local  events.out.tfevents.1545918377.ai.local  events.out.tfevents.1545919407.DESKTOP-0Q153B6  events.out.tfevents.1545919694.ai.local  events.out.tfevents.1545922597.ai.local  events.out.tfevents.1545925838.ai.local  events.out.tfevents.1545925853.ai.local
final/project/python/myTrainSet/: digits.txt
final/project/python/myTrainSet/mySet_convnet_model/: checkpoint  events.out.tfevents.1545976114.DESKTOP-0Q153B6  events.out.tfevents.1545976138.DESKTOP-0Q153B6  events.out.tfevents.1545976166.DESKTOP-0Q153B6  events.out.tfevents.1545976497.DESKTOP-0Q153B6  events.out.tfevents.1545991086.iZwz91of903ob7q193at50Z  graph.pbtxt  model.ckpt-0.index  model.ckpt-28286.index  model.ckpt-30000.index  model.ckpt-40000.index
final/project/python/myTrainSet/mySet_convnet_model/eval/: events.out.tfevents.1545977139.DESKTOP-0Q153B6  events.out.tfevents.1545977154.DESKTOP-0Q153B6  events.out.tfevents.1545977227.DESKTOP-0Q153B6  events.out.tfevents.1545983163.ai.local  events.out.tfevents.1545991526.iZwz91of903ob7q193at50Z
final/project/src/: main.cpp  utils.cpp  utils.h
final/project/src/a4/: a4Tools.cpp  a4Warping.h  houghTransform.cpp  kmeans.h  tools.cpp  tools.h
final/project/src/adaboost/: adaboost.cpp  adaboost.h  adaboostTools.cpp  adaboostTools.h
final/project/src/segmentation/: segmentTools.cpp  segmentTools.h  segmentation.cpp  segmentation.h
(+44 files in other folders)
